--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html lang="it">
     <head>
        <meta charset="utf-8">
-       <link rel="stylesheet" type="text/css" href="styles.css">
+       <link rel="stylesheet" type="text/css" href="form.css">
         <header>
             <nav></nav>
         </header>
