Il tuo messaggio di commit

--- a/calcolatrice.html
+++ b/calcolatrice.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Document</title>
+    <script src="script.js"></script>
+    <title>Somma</title>
     
 </head>
 <body>
@@ -28,5 +28,5 @@
 
 <h2 id="risultato"></h2>
 </body>
-<script src="script.js"></script>
+
 </html>
