--- a/media.html
+++ b/media.html
@@ -9,7 +9,7 @@
     <h1>Calcolo Media Voti degli Alunni</h1>
     <form id="form">
         <div>
-            <h2>Alunno 1</h2>
+            <h2>Alunno #1</h2>
             Nome: <input type="text" id="nome1" required><br>
             Cognome: <input type="text" id="cognome1" required><br>
             Voto 1: <input type="number" id="voto11" required><br>
@@ -18,7 +18,7 @@
             Voto 4: <input type="number" id="voto14" required><br>
         </div>
         <div>
-            <h2>Alunno 2</h2>
+            <h2>Alunno #2</h2>
             Nome: <input type="text" id="nome2" required><br>
             Cognome: <input type="text" id="cognome2" required><br>
             Voto 1: <input type="number" id="voto21" required><br>
@@ -27,7 +27,7 @@
             Voto 4: <input type="number" id="voto24" required><br>
         </div>
         <div>
-            <h2>Alunno 3</h2>
+            <h2>Alunno #3</h2>
             Nome: <input type="text" id="nome3" required><br>
             Cognome: <input type="text" id="cognome3" required><br>
             Voto 1: <input type="number" id="voto31" required><br>
